--- a/frontend/pages/css/style.css
+++ b/frontend/pages/css/style.css
@@ -1,89 +1,89 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap');
+:root{
+    --bg-blue: #001830;
+    --bg-white: #FFFFFF;
+    --bg-slate-white: #EAEFF2;
+    --bg-ice-white: #ECF3FB;
+    --bg-green: #27BD80;
+    --text-blue: #001830;
+    --text-light-blue: #23424A;
+    --text-black: #000000;
+    --text-white: #FFFFFF;
+    --post-blue: #002F67;
+}
+
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
 }
+
 html, body{
     height: 100%;
-    background-color: #001830;
+    background-color: var(--bg-blue);
+    display: flex;
+    flex-direction: column;
 }
+
+a{
+    color: inherit;
+}
+
+button:hover,label{
+    cursor: pointer;
+}
+
 .cabecalho{
     width: 100%;
-    height: auto;
-    background-color: #27BD80;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    height: 86px;
+    background-color: var(--bg-green);
+    padding: 20px 30px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .logo{
-    width: 110px;
-    height: 40px;
-    background-color: white;
-    background-image: url('../../src/imagens/Logo_CJR.png');
-    background-size: 80px 40px;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-left: 40px;
+    display: flex;
+    width: 124px;
+    height: 44px;
+    background-color: var(--bg-white);
     border-radius: 10px;
+    align-items: center;
+    justify-content: center;
 }
+
+.logo *{
+    width: 60px;
+}
+
 .login{
-    background-color: #001830;
-    color: white;
+    background-color: var(--bg-blue);
+    color: var(--bg-white);
     font-size: 17px;
     width: 110px;
     height: 40px;
-    border: 0;
+    border: none;
     border-radius: 10px;
-    float: right;
 }
-.singup{
-    background-color: #27BD80;
+
+.signup{
+    background-color: rgba(0,0,0,0);
     color: #001830;
     font-size: 17px;
     width: 110px;
     height: 40px;
-    border: 0;
+    border: none;
     border-radius: 10px;
-    float: right;
 }
-.corpo{
+
+.main {
     width: 100%;
-    height: 100%;
-    background-image: url('../../src/imagens/Logo_CJR_branco.png');
-    background-repeat: no-repeat;
-    background-position: left 100px;
-    background-position-x: 30px;
-}
-.form{
-    background-color: #EAEFF2;
-    height: 530px;
-    width: 400px;
-    border-radius: 6px;
-    float: right;
-    margin-right: 100px;
-    margin-top: 60px;
-    padding: 80px;
-}
-.input-container{
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-.input-container input[type="text"], input[type="password"]{
-    background-color: #EAEFF2;
-    width: 250px;
-    height: 40px;
-    border-radius: 5px;
-    font-size: 17px;
-    font-weight: bolder;
-    font
-}
-.cadastrar{
-    margin-top: 10px;
-    margin-left: 65px;
-    background-color: #EAEFF2;
-    font-size: 17px;
-    font-weight: bolder;
-    width: 120px;
-    height: 30px;
-    border-radius: 10px;
-}
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    padding: 0px 80px;   
+} 
