--- a/frontend/pages/css/feed.css
+++ b/frontend/pages/css/feed.css
@@ -8,12 +8,29 @@
     max-width: 1000px;
 }
 
-.feed .title{
-    color: var(--text-blue);
-    font-size: 24px;
+.feed .title-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 30px 35px;
     width: inherit;
     border-bottom: 2px solid var(--text-blue);
+}
+
+.title-container .title{
+    color: var(--text-blue);
+    font-size: 24px;
+}
+
+.title-container .create-post{
+    background-color: var(--post-blue);
+    color: var(--bg-white);
+    font-size: 17px;
+    width: 160px;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    filter: drop-shadow( 0px 4px 4px rgba(0,0,0,0.5))
 }
 
 .posts-container{
