--- a/backend/frontend/pages/css/style.css
+++ b/backend/frontend/pages/css/style.css
@@ -87,3 +87,7 @@ button:hover,label{
     align-items: center;
     padding: 0px 80px;   
 } 
+
+.redirect-link {
+    color: var(--text-light-blue);
+}
