--- a/frontend/pages/css/style_modal.css
+++ b/frontend/pages/css/style_modal.css
@@ -3,6 +3,8 @@
     padding:0;
     box-sizing: border-box;
 }
+
+
 .modal{
     background-color: #002F67;
     height: 500px;
@@ -23,39 +25,42 @@
 .comentario{
     background-color: rgba(0, 0, 0, 0);
     height: 280px;
-    width: 520px;
-    margin-left: 150px;
+    width: 650px;
+    margin-left: 80px;
 }
 .opcoes{
     background-color: white;
     border-radius: 10px 10px 0px 0px;
     height: 40px;
-    width: 517px;
+    width: 647px;
     margin-left: 2px;
+    padding: 5px;
 }
 
 .publicar{
     float:right;
     background-color: white;
     color: #001830;
-    font-size: 17px;
-    width: 110px;
-    height: 40px;
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    width: 150px;
+    height: 50px;
     border: 0;
     border-radius: 10px;
-    margin-right: 200px;
+    margin-right: 90px;
     margin-top: 30px;
-    
 }
 
 .cancelar{
     float: right;
     background-color: #002F67;
-    ;
     color: white;
-    font-size: 17px;
-    width: 110px;
-    height: 40px;
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    width: 150px;
+    height: 50px;
     border: 0;
     border-radius: 10px;
     margin-right: 30px;
@@ -64,26 +69,38 @@
 .negrito{
     background-color: rgba(0, 0, 0, 0);
     border-color: rgba(0, 0, 0, 0);
+    margin-left: 12px;
+    margin-right: 5px;
 }
 
 .italico{
     background-color: rgba(0, 0, 0, 0);
     border-color: rgba(0, 0, 0, 0);
+    margin-right: 5px;
 }
 
 .h{
     background-color: rgba(0, 0, 0, 0);
     border-color: rgba(0, 0, 0, 0);
+    margin-right: 12px;
+}
+
+.link{
+    background-color: rgba(0, 0, 0, 0);
+    border-color: rgba(0, 0, 0, 0);
+    margin-right: 5px;
 }
 
 .imagem{
     background-color: rgba(0, 0, 0, 0);
     border-color: rgba(0, 0, 0, 0);
+    margin-right: 5px;
 }
 
 .duvida{
     background-color: rgba(0, 0, 0, 0);
     border-color: rgba(0, 0, 0, 0);
+    margin-right: 5px;
 }
 
 
