--- a/backend/frontend/pages/css/style.css
+++ b/backend/frontend/pages/css/style.css
@@ -1,3 +1,4 @@
+/*Sávio Henrique*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap');
 :root{
     --bg-blue: #001830;
@@ -91,3 +92,4 @@ button:hover,label{
 .redirect-link {
     color: var(--text-light-blue);
 }
+/*Sávio Henrique*/
