--- a/backend/frontend/pages/css/signup_form.css
+++ b/backend/frontend/pages/css/signup_form.css
@@ -1,3 +1,4 @@
+/*Sávio Henrique*/
 .main{
     gap: 20px;
     justify-content: space-between;
@@ -40,4 +41,11 @@
     color: var(--bg-blue);
     opacity: 70%;
     font-size: 24px;
+}
+
+/*Sávio Henrique*/
+
+#error-hidden {
+    display: none;
+    color: red;
 }
