--- a/backend/frontend/pages/css/style.css
+++ b/backend/frontend/pages/css/style.css
@@ -36,6 +36,10 @@ button:hover,label{
     cursor: pointer;
 }
 
+.span-button:hover{
+    cursor:pointer;
+}
+
 .cabecalho{
     width: 100%;
     height: 86px;
@@ -45,6 +49,27 @@ button:hover,label{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.cabecalho nav{
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    gap: 20px;
+    color: var(--bg-white);
+}
+
+#user-pfp {
+    width: 60px;
+}
+
+#log-out{
+    width: 34px;
+    height: 34px;
+}
+
+#log-out img{
+    width: inherit;
 }
 
 .logo{
